# Automation

./: README.md
AutoMation/: IXIA_main.py  LinkCheck.tcl  ShellHandler.py  config.py  config.py.bak  duration.txt  function.tcl  function.tcl.bak  function_new.tcl  function_old.tcl  functional_test.py  globals.py  ixia_api.tcl  length_test.py  loopback.txt  powercycle.py  ras_pi.py  ras_pi.py.bak  read_com.tcl  readme.txt  sshmessage_080115.log.txt  sshmessage_080116.log.txt  sshmessage_080810.log.txt  sshmessage_081114.log.txt  sshmessage_082610.log.txt  sshmessage_082611.log.txt  sshmessage_092313.log.txt  telnet_powerswitch.py  test.tcl  version.txt
AutoMation/config/: config.py
AutoMation/new/: IXIA_main.py  config.py  function_new.tcl
AutoMation/ras_pi/: IXIA_main.py  backup.bat  config.py  function.tcl  ras_pi.py  sam.tcl
AutoMation/ras_pi/backup/: SNR.py
AutoMation/ras_pi/backup_SWreset/: 81_SWreset.py
AutoMation/ras_pi/code/: CMakeLists.txt  gpio22_rst.c  link_rst.c
